// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`guidance bodies — characterization snapshot > renders the backend body with a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 backend -->

# @x/y

Workspace package at \`a/b\` — type: **backend**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`README.md\` — what this package is and how to run it.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- Module-scope state belongs in the handler entry file — that is the file which re-evaluates on reload.
- Env vars come from Doppler via \`ik env-load\`; never commit a secret.
- The route prefix this service answers is declared in the consuming UI's \`dev.proxy\`, so changing a path is a two-package change."
`;

exports[`guidance bodies — characterization snapshot > renders the backend body without a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 backend -->

# @x/y

Workspace package at \`a/b\` — type: **backend**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- Module-scope state belongs in the handler entry file — that is the file which re-evaluates on reload.
- Env vars come from Doppler via \`ik env-load\`; never commit a secret.
- The route prefix this service answers is declared in the consuming UI's \`dev.proxy\`, so changing a path is a two-package change."
`;

exports[`guidance bodies — characterization snapshot > renders the design skeleton 1`] = `
"---
name: @x/y
description: TODO — one sentence describing the product surface this package renders.
colors:
  primary: '#2563eb'
  secondary: '#64748b'
  background: '#ffffff'
  surface: '#f8fafc'
  text: '#0f172a'
  muted: '#64748b'
  border: '#e2e8f0'
  success: '#16a34a'
  warning: '#d97706'
  danger: '#dc2626'
typography:
  fontFamily: TODO — the UI typeface stack.
  scale: [12, 14, 16, 20, 24, 32, 40]
  weights: [400, 500, 600, 700]
rounded: 8px
spacing: [4, 8, 12, 16, 24, 32, 48]
components:
  - button
  - input
  - card
  - dialog
---

# Design — @x/y

Replace every TODO below with the real design language. This file is the source of truth
for UI decisions in this package; agents are instructed to read it before styling anything.

## Overview

TODO — what this product is, who uses it, and the feeling the interface should convey.

## Colors

TODO — what each token in the front matter means and when to reach for it. Name the
contrast pairs that are guaranteed accessible.

## Typography

TODO — the typeface, the scale, and which size and weight each role uses
(page title, section title, body, caption, label).

## Layout

TODO — the grid, the page gutters, the maximum content width, and the breakpoints.

## Elevation & Depth

TODO — the shadow levels and what sits at each one (base, raised, overlay, modal).

## Shapes

TODO — corner radii per component size, border widths, and where a shape is square by intent.

## Components

TODO — for each component in the front matter list: its variants, its states
(default, hover, active, focus, disabled, loading), and its sizes.

## Do's and Don'ts

- Do TODO.
- Do TODO.
- Don't TODO.
- Don't TODO.
"
`;

exports[`guidance bodies — characterization snapshot > renders the e2e body with a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 e2e -->

# @x/y

Workspace package at \`a/b\` — type: **e2e**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`README.md\` — what this package is and how to run it.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- Specs run on Playwright. The \`e2e-test*\` scripts and the \`E2E_SLOW_MO\` / trace settings in \`playwright.config.ts\` are shared across repos and checked by \`infra-kit audit\` — never rename or fork them locally.
- \`e2e-test-ui-demo\` (visible browser, one worker) is for showing a flow to a person. It sets \`E2E_SLOW_MO=2000\` — 2 s before every action — unless the variable is already set; debug with \`e2e-test-ui\` instead, and everywhere else \`E2E_SLOW_MO\` stays unset, which the config reads as 0.
- Every spec cleans up what it creates, in teardown.
- Selectors live in Page Objects, never inline in specs.
- Never point a run at a production environment."
`;

exports[`guidance bodies — characterization snapshot > renders the e2e body without a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 e2e -->

# @x/y

Workspace package at \`a/b\` — type: **e2e**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- Specs run on Playwright. The \`e2e-test*\` scripts and the \`E2E_SLOW_MO\` / trace settings in \`playwright.config.ts\` are shared across repos and checked by \`infra-kit audit\` — never rename or fork them locally.
- \`e2e-test-ui-demo\` (visible browser, one worker) is for showing a flow to a person. It sets \`E2E_SLOW_MO=2000\` — 2 s before every action — unless the variable is already set; debug with \`e2e-test-ui\` instead, and everywhere else \`E2E_SLOW_MO\` stays unset, which the config reads as 0.
- Every spec cleans up what it creates, in teardown.
- Selectors live in Page Objects, never inline in specs.
- Never point a run at a production environment."
`;

exports[`guidance bodies — characterization snapshot > renders the frontend body with a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 frontend -->

# @x/y

Workspace package at \`a/b\` — type: **frontend**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`README.md\` — what this package is and how to run it.
- \`DESIGN.md\` — the visual language (colors, typography, spacing, components). It is the source of truth for UI decisions; if it is absent, ask before inventing one.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- Start the app with \`infra-kit dev\`, never a bare \`vite\` — dev URLs are proxied and port-free.
- Backend calls go through the path prefixes declared in \`dev.proxy\` in \`infra-kit.config.ts\`. Never hardcode an API base URL or a port.
- Use the tokens in \`DESIGN.md\` rather than ad-hoc colors, spacing, or type scales."
`;

exports[`guidance bodies — characterization snapshot > renders the frontend body without a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 frontend -->

# @x/y

Workspace package at \`a/b\` — type: **frontend**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`DESIGN.md\` — the visual language (colors, typography, spacing, components). It is the source of truth for UI decisions; if it is absent, ask before inventing one.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- Start the app with \`infra-kit dev\`, never a bare \`vite\` — dev URLs are proxied and port-free.
- Backend calls go through the path prefixes declared in \`dev.proxy\` in \`infra-kit.config.ts\`. Never hardcode an API base URL or a port.
- Use the tokens in \`DESIGN.md\` rather than ad-hoc colors, spacing, or type scales."
`;

exports[`guidance bodies — characterization snapshot > renders the lib body with a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 lib -->

# @x/y

Workspace package at \`a/b\` — type: **lib**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`README.md\` — what this package is and how to run it.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- The public surface is the \`exports\` map in \`package.json\`.
- Changing that map is a breaking change for every dependent package.
- Run \`pnpm run build\` before a dependent package can see a change.
- No app-specific logic belongs here."
`;

exports[`guidance bodies — characterization snapshot > renders the lib body without a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 lib -->

# @x/y

Workspace package at \`a/b\` — type: **lib**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- The public surface is the \`exports\` map in \`package.json\`.
- Changing that map is a breaking change for every dependent package.
- Run \`pnpm run build\` before a dependent package can see a change.
- No app-specific logic belongs here."
`;

exports[`guidance bodies — characterization snapshot > renders the mobile body with a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 mobile -->

# @x/y

Workspace package at \`a/b\` — type: **mobile**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`README.md\` — what this package is and how to run it.
- \`DESIGN.md\` — the visual language (colors, typography, spacing, components). It is the source of truth for UI decisions; if it is absent, ask before inventing one.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- The native shell is Capacitor; its settings live in \`capacitor.config.*\`.
- The web build feeds the native shell, so a device run needs a rebuild first.
- Use the tokens in \`DESIGN.md\` rather than ad-hoc colors, spacing, or type scales."
`;

exports[`guidance bodies — characterization snapshot > renders the mobile body without a README 1`] = `
"<!-- infra-kit:package:version 0.0.0 mobile -->

# @x/y

Workspace package at \`a/b\` — type: **mobile**.
This block is generated by \`infra-kit audit --fix\` — edit text _outside_ the markers, never inside.

## Read first

- \`DESIGN.md\` — the visual language (colors, typography, spacing, components). It is the source of truth for UI decisions; if it is absent, ask before inventing one.
- \`infra-kit.config.ts\` — the audit rules this package must satisfy.

## Checks

- \`infra-kit audit\` — validate this package against its infra-kit rules.
- \`pnpm run ts-check && pnpm run eslint-check && pnpm run test\` — this package only.
- \`pnpm run qa\` at the repo root — the full gate; run it before claiming completion.

## Rules

- The native shell is Capacitor; its settings live in \`capacitor.config.*\`.
- The web build feeds the native shell, so a device run needs a rebuild first.
- Use the tokens in \`DESIGN.md\` rather than ad-hoc colors, spacing, or type scales."
`;

exports[`guidance bodies — characterization snapshot > renders the root body 1`] = `
"<!-- infra-kit:version 0.0.0 -->

# infra-kit

This repository uses the **infra-kit** CLI for environment, worktree, and release workflows.
This block is generated by \`ik audit --fix --root\` — edit text _outside_ the markers, never inside.

## Commands (\`ik\` = \`pnpm exec infra-kit\`)

- \`ik env-load -c <config>\` / \`ik env-clear\` / \`ik env-status\` — load, clear, or inspect Doppler env vars for a config (e.g. \`dev\`). Source the returned file to apply.
- \`ik worktrees add\` / \`worktrees list\` / \`worktrees remove\` / \`worktrees sync\` — manage release and feature git worktrees.
- \`ik release create\` / \`release remove\` / \`release list\` / \`release deploy-all\` / \`release deploy-selected\` / \`release deliver\` / \`release edit\` — release-branch and deploy flow.
- \`ik release merge-dev\` — merge the dev branch into every release branch.
- \`ik audit\` — audit packages against \`infra-kit.config.ts\` rules.
- \`ik audit --fix\` — regenerate this repo's infra-kit guidance blocks (\`--all\` for every package, \`--root\` for this file).
- \`ik doctor\` — check gh / doppler / aws install + auth and repo setup.
- \`ik setup\` — set up infra-kit on this machine: shell integration, the Claude Code skills plugin, and the external CLIs (brew, git, aws, gh, doppler, portless).

## Conventions

- Tickets are prefixed by area: \`[FE]\` frontend, \`[BE]\` backend, \`[DO]\` DevOps/infra, \`[APP]\` mobile app, \`[IDEA]\` proposal, \`[ROOT]\` cross-cutting. Pick the single dominant area.
- Environment variables are managed through Doppler via \`ik env-load\` — never commit secrets.
- Every workspace package has its own CLAUDE.md with package-scoped rules — read it before editing that package.
- Launch Claude Code at the repository root: the infra-kit plugin (the \`/infra-kit:*\` skills) and this repo's \`.claude/settings.json\` hooks load only from there. If the \`/infra-kit:*\` skills are absent, this is a subdirectory session — restart Claude Code at the root.

## Agents

- Agents drive the same CLI over Bash: \`infra-kit <command> --agent --json\`. There is no MCP server; the \`/infra-kit:*\` skills are the entry points and they run the CLI on \`PATH\`.
- A confirm-gated command (\`release create|remove|edit|merge-dev|deploy-all|deploy-selected\`, \`worktrees add|remove|sync\`) previews its plan and exits without acting; re-run the same argv with \`--yes\` to execute. Never put a mutating command behind a prefix allow — that makes the \`--yes\` re-run unprompted (\`ik doctor\` warns on such a pattern).
- \`env-load\`, \`env-clear\` and \`infra-kit setup\` have no confirm step and run once: the host's prompt on the argv is the approval. \`release deliver\` and \`vendor sync\` are human-only and are refused under agent mode.
- A command that needs a human choice returns a structured \`argument_required\` refusal naming the option; pass the value instead of retrying.

## Writing code

- Comment the **why**, never the **what**. If a comment would only restate what the code already says (a name, a type, an obvious assignment), delete it — and if code needs a comment to be _understood_, prefer renaming/refactoring until it reads on its own. Reserve comments for the genuinely non-obvious: external quirks, ordering constraints, fail-safe branches, workarounds, business-logic definitions. Keep them compact. When a comment explains a bug, outage, or upstream issue, link the source of truth instead of describing it."
`;
